--- a/Assignment.html
+++ b/Assignment.html
@@ -5,22 +5,24 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p>
+		<main>
+		<img></img>
 		<h1>Groomer Riding</h1>
-		Groomed runs are trails that are maintained by the staff to eliminate natural features in order to make riding easier.
+		<p>Groomed runs are trails that are maintained by the staff to eliminate natural features in order to make riding easier.
 		You can choose to ride groomed trails for learning different techniques, to advance your abilities, or to just have fun with some friends.
 		</p>
-		<p>
+		</main>
 		<h3>Backcountry Riding</h3>
-		Backcountry refers to any area that isn't maintained, which includes tree areas off the groomed trails,
+		<p>Backcountry refers to any area that isn't maintained, which includes tree areas off the groomed trails,
 		or entire areas of a mountain that are left to nature and the riders. If you're capable and trusting in your abilities you can
 		attempt to ride in the backcountry to really test your techniques and to enjoy the mountain away from the crowds.
 		</p>
-		<p>
 		<h6>Park Riding</h6>
-		The park is an area that is not only usually groomed but also has features added that you can incorporate into your riding.
+		<p>The park is an area that is not only usually groomed but also has features added that you can incorporate into your riding.
 		Such as jumps, rails, boxes and other fun objects that are enjoyable to use. You can ride in the park to really test your techniques and
 		push yourself to try new moves and styles and to have some extra fun or friendly competition with friends.
 		</p>
 	</body>
+<footer>
+</footer>
 </html>
