--- a/Assignment.html
+++ b/Assignment.html
@@ -4,6 +4,11 @@
 		<title>Snowboarding</title>
 		<meta charset="utf-8">
 	</head>
+		<nav>
+			<a href="Assignment.html">HOME</a>
+			<a href="Dog.html">Dog Picture</a>
+			<a href="Dog-Video.html">Dog Video</a>
+		</nav>
 	<body>
 		<main>
 		<img></img>
