--- a/Dog-Video.html
+++ b/Dog-Video.html
@@ -2,15 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Cute Cooper Puppy Pic</title>
+		<title>Cute Doggos</title>
 	</head>
 		<nav>
 			<a href="Assignment.html">HOME</a>
 			<a href="Dog.html">Dog Picture</a>
 			<a href="Dog-Video.html">Dog Video</a>
 		</nav>
-	<body>
-		<img src="Images/CooperPuppy.jpg">
-	</body>
+		<main>
+			<a href="https://youtu.be/WDlu1OhvYBM">Cute Lab Puppies</a>
+		</main>
 </html>
-	
