Blockquote and embed video
Added a blockquote and embedded a video

--- a/Assignment.html
+++ b/Assignment.html
@@ -10,7 +10,14 @@
 			<a href="Dog-Video.html">Dog Video</a>
 		</nav>
 	<body>
+			<iframe width="420" height="315"
+			src="https://www.youtube.com/embed/xlUVr3rJ59A">
+			</iframe>
 		<main>
+		<blockquote>When it comes down to it, it’s pretty simple. 
+		Adventure is what you make it. And whether it’s the travel, 
+		the discovery or just the feeling of letting go, 
+		the only way we’ll ever find out is to get out there and do it. Enjoy the ride. - Travis Rice</blockquote>
 		<img></img>
 		<h1>Groomer Riding</h1>
 		<p>Groomed runs are trails that are maintained by the staff to eliminate natural features in order to make riding easier.
