Added missing body tags

--- a/HTML-Documents/Snowboarding-Video.html
+++ b/HTML-Documents/Snowboarding-Video.html
@@ -8,6 +8,7 @@
 				<a href="Snowboarding-Video.html">VIDEO</a>
 				<a href="Snowboarding-Image.html">IMAGE</a>
 			</nav>
+	<body>
 		<main>
 			<h3>Here is Travis Rice riding some backcountry pillows!</h3>
 			<iframe width="1080"
@@ -15,4 +16,5 @@
 			src="https://www.youtube.com/embed/xlUVr3rJ59A">
 			</iframe>
 		</main>
+	</body>
 </html>
