--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -2,4 +2,15 @@
 <html lang="en">
 <script src="Basic_Javascript_1.js">
 </script>
+	<body>
+		<p><font color="green" face="Calibri" size="7">
+			<b>You wouldn't like me when I'm angry!</b>
+		</font></p>
+		<p><font color="#0000FF" face="Arial" size="5">
+			<i>Your friendly neighborhood Spider-Man.</i>
+		</font></p>
+		<p><font color="Red" face="Roboto" size="6">
+			<u>Honey where is my Super Suit!</u>
+		</font></p>
+	</body>
 </html>
