Image and Styling
Added Iron Man image and font styling

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>Super Hero Quotes</title>
+		<meta charset="UTF=8">
 <script src="Basic_Javascript_1.js">
 </script>
 	<body>
-		<p><font color="green" face="Calibri" size="7">
+		<p>
+		<font color="green" face="Calibri" size="7">
 			<b>You wouldn't like me when I'm angry!</b>
 		</font></p>
-		<p><font color="#0000FF" face="Arial" size="5">
+		<p>
+		<font color="#0000FF" face="Comic Sans" size="5">
 			<i>Your friendly neighborhood Spider-Man.</i>
 		</font></p>
-		<p><font color="Red" face="Roboto" size="6">
-			<u>Honey where is my Super Suit!</u>
+		<p>
+		<font color="Red" face="Impact" size="6">
+			<u>I am Iron Man!</u>
 		</font></p>
+		<p>
+		<img src="Basic HTML Images/IronMan.jpg" alt="Iron Man stare down">
+		</p>
 	</body>
 </html>
