Changed backend file path

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -19,7 +19,7 @@
 			<u>I am Iron Man!</u>
 		</font></p>
 		<p>
-		<img src="Basic HTML Images/IronMan.jpg" alt="Iron Man stare down">
+		<img src="Basic_HTML_Images/IronMan.jpg" alt="Iron Man stare down">
 		</p>
 	</body>
 </html>
