Added Closing Head Tag

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Super Hero Quotes</title>
 		<meta charset="UTF=8">
+	</head>
 <script src="Basic_Javascript_1.js">
 </script>
 	<body>
