HTML CSS link assignment 2
Created css file and linked it to HTML 3

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -3,14 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Basic HTML 3</title>
-		<style>
-			p {color: red;
-			text-align: center}
-		</style>
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	</head>
 		<body>
-			<p>The majority of this page is in red, and centered, 
-			however,<div style="color: blue">this section is in blue and on the left.</div>
+			<p>This text will appear in red and
+			in the center of the screen.
 			</p>
 		</body>
 </html>
