--- a/Basic_HTML_and_CSS/Basic_HTML_4.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_4.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-	<meta charset="UTF-8">
-	<title>CSS Link</title>
-	<link rel="stylesheet" type="text/css" href="My_Style.css">
-	</head>
 	<body>
-		<p>Hey! Over here!</p>
-		<p>These paragraphs are styled with CSS.</p>
+	<style>
+	.font_1 {
+		background-color: black;
+		color: yellow;
+		font-size: large;
+	}
+	.font_2 {
+		background-color: darkblue;
+		color: white;
+		font-size: medium;
+	}
+	</style>
+	<h2 class="font_1">This h2 element is styled per class attribute font_1</h2>
+	<h3 class="font_2">This h3 element is styled per class atttribute font_2</h3>
+	<h4 class="font_1">Even though this is an h4 element, it is styled the same
+	as the h2 element because we pointed to the class attribute font_1<h4>
 	</body>
 </html>
