HTML Table Styling
Created css file and linked to HTML_Table.html

--- a/Basic_HTML_and_CSS/HTML_Table.html
+++ b/Basic_HTML_and_CSS/HTML_Table.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Table</title>
+	<link rel="stylesheet" type="text/css" href="CSS_Table.css">
 </head>
 	<body>
 		<h1>Snowboard Types</h1>
