CSS file for HTML_Lists
Created and linked css file to HTML_Lists.html to change to roman numerals and square bullet points.

--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>My First List</title>
+	<link rel="stylesheet" type="text/css" href="CSS_List.css">
 </head>
 <body>
 	<p>Here is a list of my favorite Mountains to ride.</p>
