HTML Entity CSS shadow Assignment
Added HTML entity to Basic_HTML_5 and text-shadow property to Basic_CSS_2 and re-linked it to Basic_HTML_5 nested in the head element.

--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-	<body>
+	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
-		<p>Styled element.</p>
+	</head>
+		<h1>This heading will utilize the text-shadow property.</h1>
+	<body>
+		<p>Here is a common symbol for prescriptions. &rx;</p>
 	</body>
 </html>
