--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="CSS_List.css">
 </head>
 <body>
-	<p>Here is a list of my favorite Mountains to ride.</p>
+	<p>Here is a list of my favorite Mountains to ride.&hearts;</p>
 		<ol>
 			<li>Arapahoe Basin</li>
 			<li>Keystone</li>
