--- a/Basic_HTML_and_CSS/Basic_HTML_Spacing.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_Spacing.html
@@ -21,5 +21,6 @@
 		<section>
 			<h1>This next section will be entirely double spaced</h1>
 				<p>This &nbsp;is  &nbsp;the  &nbsp;universal  &nbsp;symbol  &nbsp;for  &nbsp;copyright  &nbsp;&copy;.</p>
+		</section>
 	</body>
 </html>
