--- a/Basic_HTML_and_CSS/HTML_Form.html
+++ b/Basic_HTML_and_CSS/HTML_Form.html
@@ -12,4 +12,8 @@
 		Password: <input type="password" name="Password"><br>
 		<input type="submit" value="Submit">
 	</form>
+	
+	<em>Check out the latest news in PC hardware.</em><br>
+	<a href="https://www.pcgamer.com/hardware/news/" target="new">PC Gamer Hardware News</a>
+	
 </html>
