--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -82,7 +82,7 @@
 		<div id="video">
 			<h3>We don't recommend attempting any of these stunts but 
 			this should at least be able to get you in the mood!</h3>
-			<iframe width="560" height="315" src="https://youtube.com/embed/aLqdOpE-lm8">
+			<iframe width="560" height="315" src="https://youtube.com/embed/aLqdOpE-lm8"></iframe>
 		</div>
 		
 		<!-- END VIDEO -->
