--- a/Project/basic_css_demo_1.html
+++ b/Project/basic_css_demo_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Basic HTML Template</title>
+        <title>Basic CSS Demo</title>
         <link rel="stylesheet" href="./css/basic_style.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
