--- a/Effecting-images-with-CSS/photo-package.html
+++ b/Effecting-images-with-CSS/photo-package.html
@@ -10,7 +10,7 @@
         <!--PHOTO CONTAINER 1-->
         <div class="photo-container">
             <div class="photo">
-                <img src="./images/thumb/thumbnail_2.png" alt="">
+                <img src="./images/thumb/thumbnail_2.jpg" alt="">
                 <div class="photo-overlay">
                     <h3 class="white-head">Click to Enlarge</h3>
                     <p>We have several launches departing daily, book your flight today</p>
@@ -18,6 +18,6 @@
             </div>
         </div>
         <!--END PHOTO CONTAINER-->
-        
+
     </body>
 </html>
