--- a/Project/index.html
+++ b/Project/index.html
@@ -33,6 +33,19 @@
 	<!--END HOME-->
 
 	<!--GALLERY-->
+	<section>
+	</section>
+	<!--END GALLERY-->
+
+	<!--RSVP-->
+	<section>
+	</section>
+	<!--END RSVP-->
+
+	<!--FOOTER-->
+	<div>
+	</div>
+	<!--END FOOTER-->
 	
 </body>
 </html>
