--- a/Project/index.html
+++ b/Project/index.html
@@ -33,17 +33,35 @@
 	<!--END HOME-->
 
 	<!--GALLERY-->
-	<section>
+	<section id="#gallery">
+		<div class="container">
+			<h1>Gallery</h1>
+			<div class="flex-container">
+
+				<!--PHOTO CONTAINER 1-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_1/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 1-->
+
+			</div>
+		</div>
 	</section>
 	<!--END GALLERY-->
 
 	<!--RSVP-->
-	<section>
+	<section id="#contact">
 	</section>
 	<!--END RSVP-->
 
 	<!--FOOTER-->
-	<div>
+	<div id="#footer">
 	</div>
 	<!--END FOOTER-->
 	
