--- a/Project/index.html
+++ b/Project/index.html
@@ -50,6 +50,102 @@
 				</div>
 				<!--PHOTO CONTAINER 1-->
 
+				<!--PHOTO CONTAINER 2-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_2/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 2-->
+
+				<!--PHOTO CONTAINER 3-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_3/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 3-->
+
+				<!--PHOTO CONTAINER 4-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_4/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 4-->
+
+				<!--PHOTO CONTAINER 5-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_5/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 5-->
+
+				<!--PHOTO CONTAINER 6-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_6/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 6-->
+
+				<!--PHOTO CONTAINER 7-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_7/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 7-->
+
+				<!--PHOTO CONTAINER 8-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_8/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 8-->
+
+				<!--PHOTO CONTAINER 9-->
+				<div class="photo-container">
+					<div class="photo">
+						<img src="./images/thumb/thumbnail_9/jpg" alt="">
+						<div class="photo-overlay">
+							<h3>Click to Enlarge</h3>
+							<p>We have several space launches departing daily, book flight today!</p>
+						</div>
+					</div>
+				</div>
+				<!--PHOTO CONTAINER 9-->
+
 			</div>
 		</div>
 	</section>
