--- a/Project/index.html
+++ b/Project/index.html
@@ -41,7 +41,7 @@
 				<!--PHOTO CONTAINER 1-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_1/jpg" alt="">
+						<img src="./images/thumb/thumbnail_1.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -53,7 +53,7 @@
 				<!--PHOTO CONTAINER 2-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_2/jpg" alt="">
+						<img src="./images/thumb/thumbnail_2.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -65,7 +65,7 @@
 				<!--PHOTO CONTAINER 3-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_3/jpg" alt="">
+						<img src="./images/thumb/thumbnail_3.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -77,7 +77,7 @@
 				<!--PHOTO CONTAINER 4-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_4/jpg" alt="">
+						<img src="./images/thumb/thumbnail_4.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -89,7 +89,7 @@
 				<!--PHOTO CONTAINER 5-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_5/jpg" alt="">
+						<img src="./images/thumb/thumbnail_5.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -101,7 +101,7 @@
 				<!--PHOTO CONTAINER 6-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_6/jpg" alt="">
+						<img src="./images/thumb/thumbnail_6.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -113,7 +113,7 @@
 				<!--PHOTO CONTAINER 7-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_7/jpg" alt="">
+						<img src="./images/thumb/thumbnail_7.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -125,7 +125,7 @@
 				<!--PHOTO CONTAINER 8-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_8/jpg" alt="">
+						<img src="./images/thumb/thumbnail_8.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -137,7 +137,7 @@
 				<!--PHOTO CONTAINER 9-->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/thumbnail_9/jpg" alt="">
+						<img src="./images/thumb/thumbnail_9.jpg" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p>We have several space launches departing daily, book flight today!</p>
@@ -153,11 +153,37 @@
 
 	<!--RSVP-->
 	<section id="#contact">
+		<div class="container">
+			<div class="heading-padding">
+				<h1 class="heading-padding">Reservations</h1>
+
+				<div class="reservation">
+					<h2><span>Your adventure is just around the moon.</span>
+						<br/>Reserve your flight today!
+					</h2>
+					<p class="rsvp-text">
+						Please provide us with your basic contact information.
+					</p>
+					<div class="form-rsvp">
+						<form action="" method="post">
+							<input class="rsvp" type="text" value="" placeholder="First Name">
+							<input class="rsvp" type="text" value="" placeholder="Last Name">
+							<input class="rsvp" type="text" value="" placeholder="Email Address">
+							<input class="rsvp" type="text" value="" placeholder="Phone Number">
+							<div class="form-spacer">
+								<label class="terms">Terms and Conditions</label>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<!--END RSVP-->
 
 	<!--FOOTER-->
 	<div id="#footer">
+		www.thespacestation.com &nbsp;|&nbsp; &copy; 2023
 	</div>
 	<!--END FOOTER-->
 	
