--- a/Project/index.html
+++ b/Project/index.html
@@ -33,7 +33,7 @@
 	<!--END HOME-->
 
 	<!--GALLERY-->
-	<section id="#gallery">
+	<section id="gallery">
 		<div class="container">
 			<h1>Gallery</h1>
 			<div class="flex-container">
@@ -152,7 +152,7 @@
 	<!--END GALLERY-->
 
 	<!--RSVP-->
-	<section id="#contact">
+	<section id="contact">
 		<div class="container">
 			<div class="heading-padding">
 				<h1 class="heading-padding">Reservations</h1>
@@ -182,7 +182,7 @@
 	<!--END RSVP-->
 
 	<!--FOOTER-->
-	<div id="#footer">
+	<div id="footer">
 		www.thespacestation.com &nbsp;|&nbsp; &copy; 2023
 	</div>
 	<!--END FOOTER-->
