--- a/HTML-Documents/code-error-assignment.html
+++ b/HTML-Documents/code-error-assignment.html
@@ -14,12 +14,13 @@
 
         <p><a href="https://www.learncodinganywhere.com/">This is The Tech Academy's website.</a></p>
 
-         <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png"
+         <img style="max-width:95%; border:2px dashed red"
+         src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png"
          width="600" height="300" alt="The Tech Academy Logo">
 
-        <h3><centered>Have you seen The Tech Academy's Student Orientation video?</centered></h3>
+        <h3 align="right">Have you seen The Tech Academy's Student Orientation video?</h3>
         <iframe src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4"
-                 width="560" height="315" frameborder="0" allowfullscreen="true">
+                width="560" height="315" frameborder="0" allowfullscreen="true">
         </iframe>
 </body>
 </html>
