--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>4 Wheels 4-U</title>
+		<link rel="stylesheet" href="./css/one_page_website.css">
 		<style>
 		* {
 			box-sizing: border-box;
@@ -70,8 +71,8 @@
 				<form action="" method="get">
 				First name: <input type="text" name="First_Name"><br>
 				Last name: <input type="text" name="Last_Name"><br>
-				Email: <input type="email" name="Email"><br>
-				Phone Number: <input type="phone" name="Phone_Number"><br>
+				Email: <input type="text" name="Email"><br>
+				Phone Number: <input type="text" name="Phone_Number"><br>
 				<input type="submit" value="Submit">
 				</form>
 			</div>
