--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -38,6 +38,13 @@
             </div>
         </nav>
 
+        <div class="jumbotron jumbotron-fluid bg-info text-center">
+            <div class="container">
+                <h1 class="display-4 text-light">Academy Cinemas</h1>
+                <p class="lead text-light">Sit back, relax, and enjoy the show...</p>
+            </div>
+        </div>
+
 
 
 
