--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -83,6 +83,15 @@
             </div>
         </div>
 
+        <div class="text-center">
+            <form>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
 
 
 
