--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -77,11 +77,15 @@
                             <a class="nav-link" href="#">Beauty and the Beast</a>
                         </li>
                     </ul>
-
-
                 </div>
             </div>
         </div>
+
+        <!--showtimes-->
+
+
+        
+        <!--/showtimes-->
 
         <div class="text-center">
             <form>
@@ -93,7 +97,22 @@
             </form>
         </div>
 
-        
+        <div class="container my-5">
+            <ul class="nav nav-inline">
+                <li class="nav-item">
+                    <small><a class="nav-link active" href="#">Movie Rewards</a></small>
+                </li>
+                <li class="nav-item">
+                    <small><a class="nav-link" href="#">Movies@news.org</a></small>
+                </li>
+                <li class="nav-item">
+                    <small><a class="nav-link" href="#">Info@academycinemas.com</a></small>
+                </li>
+                <li class="nav-item">
+                    <small class="nav-link">&copy;2019 Academy Cinemas&reg;</small>
+                </li>
+            </ul>
+        </div>
 
 
 
