--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">About</a>
+                        <a class="nav-link text-light" href="#about">About</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link text-light" href="#">Showtimes</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">Deals</a>
+                        <a class="nav-link text-light" href="#deals">Deals</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -54,7 +54,7 @@
 
 
                 </div>
-                <div class="col-sm">
+                <div id="about" class="col-sm">
                     
                     <h3>Accomodations</h3>
                     <p>Located in beautiful Portland, Oregon's pearl district, our reels have been spinning since 1959.</p>
@@ -84,11 +84,11 @@
         <!--showtimes-->
 
 
-        
+
         <!--/showtimes-->
 
         <div class="text-center">
-            <form>
+            <form id="deals">
                     <h1 class="text-primary my-5">Sign up for Movie Club Rewards</h1>
                 <div class="form-group">
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
