--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -25,7 +25,7 @@
                         <a class="nav-link text-light" href="#about">About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">Showtimes</a>
+                        <a class="nav-link text-light" href="#showtimes">Showtimes</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link text-light" href="#deals">Deals</a>
@@ -82,6 +82,11 @@
         </div>
 
         <!--showtimes-->
+
+        <div id="showtimes">
+
+
+        </div>
 
 
 
