--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -83,7 +83,7 @@
 
         <!--showtimes-->
 
-        <div id="showtimes" class="card-deck">
+        <div id="showtimes" class="card-deck my-5">
             <div class="card">
                 <img class="card-img-top" src="./img/movieC.jpg" alt="Card image cap">
                 <div class="card-body">
