styling and filters to thumb_4.jpg

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Challenges</title>
+        <style>
+            .center {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+                filter: grayscale(100%);
+                border-radius: 10px;
+            }
+        </style>
     </head>
 <body>
     <div>
-        <img src="./images/thumb_4/jpg" alt="jeep image" class="center">
+        <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
+        width="420">
     </div>
 
 </body>
