added and styled footer

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -12,6 +12,10 @@
                 filter: grayscale(100%);
                 border-radius: 10px;
             }
+            footer {
+                text-align: center;
+                font-weight: bold;
+            }
         </style>
     </head>
 <body>
@@ -19,6 +23,10 @@
         <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
         width="420">
     </div>
+
+    <footer>
+        This website was created by S1eev3
+    </footer>
 
 </body>
 </html>
