--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -3,47 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Challenges</title>
-        <style>
-            .center {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                width: 50%;
-                filter: grayscale(100%);
-                border-radius: 10px;
-            }
+        <link rel="stylesheet" href="challenges.css">
 
-            footer {
-                text-align: center;
-                font-weight: bold;
-            }
-
-            table, th, td {
-                border: 1px solid;
-            }
-
-            td, th {
-                padding: 5px;
-            }
-
-            th {
-                background-color: aqua;
-            }
-
-            .image-container {
-                position: relative;
-                text-align: center;
-                color: white;
-            }
-
-            .centered {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-        </style>
-    </head>
 <body>
     <div class="image-container">
         <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
