--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="challenges.css">
 
 <body>
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </div>
+
     <div class="image-container">
         <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
         width="420">
