column text and styling

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -48,6 +48,13 @@
         </table>
     </div>
 
+    <div class="row">
+        <div class="column">Column 1</div>
+        <div class="column">Here is alot of text to try and fill out
+            the column and show the boundaries of the width attributes.
+        </div>
+    </div>
+
     <footer>
         This website was created by S1eev3
     </footer>
