added overlay container and text

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -13,10 +13,17 @@
         <a href="#contact">Contact</a>
     </div>
 
+    <div>
+        <p>This text will change color and cursor when you hover over it.</p>
+    </div>
+
     <div class="image-container">
         <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
         width="420">
         <div class="centered">Isn't this majestic!</div>
+            <div class="overlay">
+                <div class="text">This must be magic!</div>
+            </div>
     </div>
 
     <div class="table-container">
