iamge overlay effects

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="image-container">
-        <img src="./images/thumb_4.jpg" alt="jeep image" class="center"
+        <img src="./images/thumb_4.jpg" alt="jeep image" class="image"
         width="420">
         <div class="centered">Isn't this majestic!</div>
             <div class="overlay">
