linked video file

--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -18,8 +18,7 @@
     </div>
 
     <div class="image-container">
-        <img src="./images/thumb_4.jpg" alt="jeep image" class="image"
-        width="420">
+        <img src="./images/thumb_4.jpg" alt="jeep image" class="image">
         <div class="centered">Isn't this majestic!</div>
             <div class="overlay">
                 <div class="text">This must be magic!</div>
@@ -60,6 +59,12 @@
         <div class="column">Here is alot of text to try and fill out
             the column and show the boundaries of the width attributes.
         </div>
+    </div>
+
+    <div>
+        <video autoplay muted loop>
+            <source src="./videos/butter-under-sign.mp4" type="video/mp4">
+        </video>
     </div>
 
     <footer>
