--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -61,10 +61,13 @@
         </div>
     </div>
 
-    <div>
+    <div class="video-container">
         <video autoplay muted loop>
             <source src="./videos/butter-under-sign.mp4" type="video/mp4">
         </video>
+            <div class="video-text">
+                <h3>Isn't this smooth</h3>
+            </div>
     </div>
 
     <footer>
