--- a/Basic_HTML_and_CSS/challenges.html
+++ b/Basic_HTML_and_CSS/challenges.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Challenges</title>
         <link rel="stylesheet" href="challenges.css">
+    </head>
 
 <body>
 
