--- a/Basic_HTML_and_CSS/media_query.html
+++ b/Basic_HTML_and_CSS/media_query.html
@@ -3,6 +3,21 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
+    <style>
+        p {
+            background-color: black;
+        }
+
+        @media screen and (max-width:600px) {
+            p {
+                background-color: blue;
+            }
+        }
+    </style>
     </head>
+
+<body>
+    <p>Here is some text</p>
+</body>
 
 </html>
