added video file and linked to index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,12 +11,21 @@
 
     <!--NAVBAR-->
     <div class="navbar">
-
+        <a class="active" href="#Home">Home</a>
+        <a href="#About">About</a>
+        <a href="#Github">Github</a>
+        <a href="#Contact">Contact</a>
     </div>
+
+    <br>
+    <br>
 
     <!--BACKGROUND VIDEO-->
     <div id="Home">
-
+        <video autoplay muted loop id="typing-video">
+            <source src="images/videos/typing_video.mp4" type="video/mp4">
+            Your browser does not support HTML video.
+        </video>
     </div>
 
     <!--VIDEO TEXT-->
