video text section

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,6 +30,19 @@
 
     <!--VIDEO TEXT-->
     <div class="video-text">
+        <h1 class="white-text">Mitchal Larson's Portfolio</h1>
+        <strong>
+            <p class="center">
+                <q>Any fool can write code that a computer can understand. 
+                    <br>Good programmers write code that humans can understand.</q>
+                    <br> -Martin Fowler
+                    <br>
+                    <br>My name is Mitchal Larson. Welcome to my portfolio website.
+                    On it, I will tell you about my background and experience.
+                    <br>
+                    <br>Thank you for stopping by and enjoy!
+            </p>
+        </strong>
 
     </div>
 
