about, github, contact and footer sections

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -48,21 +48,71 @@
 
     <!--ABOUT SECTION-->
     <div class="row" id="About">
-
+        <!--LEFT COLUMN-->
+        <div class="column-2">
+            <img src="" alt="">
+        </div>
+        <!--RIGHT COLUMN-->
+        <div class="column-1">
+            <h1>About</h1>
+            <p>
+                I am a software developer who loves to code! I am an avid traveller who's hobbies
+                also include snowboarding, video games, and learning everything and anything I can.
+                <br>
+                <br>I am a graduate of <a href="https://www.learncodinganywhere.com"
+                target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and
+                trained and experienced in the following web and programming languages:
+                HTML, CSS, JavaScript, SQL, C# and more.
+                <br>
+                <br>I am a full stack developer and would love to work with you on your project.
+                <a href="#Contact">Contact</a> me below!
+            </p>
+        </div>
     </div>
 
     <!--GITHUB SECTION-->
     <div class="row" id="Github">
-
+        <!--LEFT COLUMN-->
+        <div class="column-1">
+            <h1>GitHub</h1>
+            <p>
+                You can view my coding projects on my GitHub profile here:
+                <br>
+                <p class="center"><a href="https://github.com/S1eev3" target="_blank">Mitchal Larson (S1eev3) Github</a></p>
+            </p>
+        </div>
+        <!--RIGHT COLUMN-->
+        <div class="column-2">
+            <a href="https://github.com/S1eev3" target="_blank"><img src="images/GitHub.png" alt="GitHub Logo"></a>
+        </div>
     </div>
 
-    <!--CONTECT SECTION-->
+    <!--CONTACT SECTION-->
     <div class="row" id="Contact">
-
+        <!--Contact image, left column-->
+        <div class="column-2 column-tall">
+            <img src="images/Contact.jpg" alt="Contact_Image">
+        </div>
+        <!--Contact form, right column-->
+        <div class="column-1 column-tall">
+            <h1>Contact</h1>
+            <form action="https://formspree.io/f/mayzegdy" method="POST">
+                <label>Name:</label>
+                    <input type="text" placeholder="Please enter your name here">
+                <label>Email:</label>
+                    <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
+                <label>Message:</label>
+                    <input type="text" id="Message" name="Message" placeholder="Please write your message here">
+                    <input type="submit" value="SUBMIT">
+            </form>
+        </div>
     </div>
 
     <!--FOOTER SECTION-->
     <footer>
+        <p>
+            <p class="center">&copy S1eev3 Development</p>
+        </p>
 
     </footer>
 
