--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,10 @@
 
 <!--HEAD-->
 <head>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
+    <title>Mitchal Larson</title>
+    <link rel="stylesheet" type="text/css" href="./css/portfolio.css"
 </head>
 
 <!--BODY-->
