changed wording and added headshot image

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -53,17 +53,17 @@
     <div class="row" id="About">
         <!--LEFT COLUMN-->
         <div class="column-2">
-            <img src="" alt="">
+            <img src="images/headshot.png" alt="headshot">
         </div>
         <!--RIGHT COLUMN-->
         <div class="column-1">
             <h1>About</h1>
             <p>
                 I am a software developer who loves to code! I am an avid traveller who's hobbies
-                also include snowboarding, video games, and learning everything and anything I can.
+                also include snowboarding, video games, all while learning anything and everything I can.
                 <br>
                 <br>I am a graduate of <a href="https://www.learncodinganywhere.com"
-                target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and
+                target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and am
                 trained and experienced in the following web and programming languages:
                 HTML, CSS, JavaScript, SQL, C# and more.
                 <br>
