--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <!--HEAD-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
     <title>Mitchal Larson</title>
-    <link rel="stylesheet" type="text/css" href="./css/portfolio.css"
+    <link rel="stylesheet" type="text/css" href="./css/portfolio.css">
 </head>
 
 <!--BODY-->
