--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -33,13 +33,16 @@
 			<h3>Don't wait this could be you!</h3>
 			<div class="row">
 				<div class="column">
-					<img src="images/thumb_1.jpg" alt="Thumbnail 1" style="width:100%">
+					<img src="images/thumb_1.jpg" alt="Thumbnail 1" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column">
-					<img src="images/thumb_2.jpg" alt="Thumbnail 2" style="width:100%">
+					<img src="images/thumb_2.jpg" alt="Thumbnail 2" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow">
 				</div>
 				<div class="column">
-					<img src="images/thumb_3.jpg" alt="Thumbnail 3" style="width:100%">
+					<img src="images/thumb_3.jpg" alt="Thumbnail 3" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow">
+				</div>
+				<div class="column">
+					<img src="images/thumb_4.jpg" alt="Thumbnail 4" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow">
 				</div>
 			</div>
 		
