--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -49,6 +49,59 @@
 		</div>
 		
 		<!-- END GALLERY -->
+
+		<!-- The Modal/Lightbox -->
+		<div id="myModal" class="modal">
+			<span class="close cursor" onclick="closeModal()">&times;</span>
+			<div class="modal-content">
+
+				<div class="mySlides">
+					<div class="numbertext">1 / 4</div>
+					<img src="images/wide_1.jpg" style="width:100%">
+				</div>
+
+				<div class="mySlides">
+					<div class="numbertext">2 / 4</div>
+					<img src="images/wide_2.jpg" style="width:100%">
+				</div>
+
+				<div class="mySlides">
+					<div class="numbertext">3 / 4</div>
+					<img src="images/wide_3.jpg" style="width:100%">
+				</div>
+
+				<div class="mySlides">
+					<div class="numbertext">4 / 4</div>
+					<img src="images/wide_4.jpg" style="width:100%">
+				</div>
+
+				<!-- Next/previous controls -->
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+				<!-- Caption text -->
+				<div class="caption-container">
+					<p id="caption"></p>
+				</div>
+
+				<!-- Thumbnail image controls -->
+				<div class="column">
+					<img class="demo" src="images/thumb_1.jpg" onclick="currentSlide(1)" alt="Thumbnail 1">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="images/thumb_2.jpg" onclick="currentSlide(2)" alt="Thumbnail 2">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="images/thumb_3.jpg" onclick="currentSlide(3)" alt="Thumbnail 3">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="images/thumb_4.jpg" onclick="currentSlide(4)" alt="Thumbnail 4">
+				</div>
+			</div>
+		</div>
 		
 		<!-- CONTACT FORM -->
 		<div id="contact">
