linked js to html

--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>4 Wheels 4-U</title>
 		<link rel="stylesheet" href="./css/one_page_website.css">
+		<script src="javascript/one_page_website.js" defer></script>
 	</head>
 	<body>
 	
