--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -87,19 +87,19 @@
 
 				<!-- Thumbnail image controls -->
 				<div class="column">
-					<img class="demo" src="images/thumb_1.jpg" onclick="currentSlide(1)" alt="Thumbnail 1">
+					<img class="demo" src="images/thumb_1.jpg" onclick="currentSlide(1)" alt="Big Flex" style="width:100%">
 				</div>
 
 				<div class="column">
-					<img class="demo" src="images/thumb_2.jpg" onclick="currentSlide(2)" alt="Thumbnail 2">
+					<img class="demo" src="images/thumb_2.jpg" onclick="currentSlide(2)" alt="Buddy System" style="width:100%">
 				</div>
 
 				<div class="column">
-					<img class="demo" src="images/thumb_3.jpg" onclick="currentSlide(3)" alt="Thumbnail 3">
+					<img class="demo" src="images/thumb_3.jpg" onclick="currentSlide(3)" alt="Trail Party" style="width:100%">
 				</div>
 
 				<div class="column">
-					<img class="demo" src="images/thumb_4.jpg" onclick="currentSlide(4)" alt="Thumbnail 4">
+					<img class="demo" src="images/thumb_4.jpg" onclick="currentSlide(4)" alt="Solo Overlook" style="width:100%">
 				</div>
 			</div>
 		</div>
