--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -131,6 +131,19 @@
         
         <!--/showtimes-->
 
+        <!-- Jumbotron Heading-->
+        <div class="jumbotron jumnbotron-fluid bg-info mt-5 text-center">
+            <div class="container">
+                <h1 class="display-4 hidden-sm-down" style="color:#fff;font-family:roboto;font-weight: 900;text-transform: uppercase;">
+                Movie Deals</h1>
+                <p class="lead">Check out our monthly deals...</p>
+                <!--movie deals-->
+                <button type="button" class="btn btn-outline-primary" data-toggle="model" data-target="#register">See our monthly movie deals!</button>
+                <!--movie deals-->
+            </div>
+        </div>
+        <!--/Jumbotron heading-->
+
         <div class="text-center">
             <form id="deals">
                     <h1 class="text-primary my-5">Sign up for Movie Club Rewards</h1>
