--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -138,22 +138,71 @@
                 Movie Deals</h1>
                 <p class="lead">Check out our monthly deals...</p>
                 <!--movie deals-->
-                <button type="button" class="btn btn-outline-primary" data-toggle="model" data-target="#register">See our monthly movie deals!</button>
-                <!--movie deals-->
+                <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthly movie deals!</button>
+                <!--/movie deals-->
             </div>
         </div>
         <!--/Jumbotron heading-->
 
+        <!-- Sign up form-->
         <div class="text-center">
             <form id="deals">
                     <h1 class="text-primary my-5">Sign up for Movie Club Rewards</h1>
                 <div class="form-group">
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover"
+                    data-placement="top" data-content="Submit your email to receive great movie reward deals!">Sign Up!</button>
             </form>
         </div>
+        <!--/Sign up form-->
 
+        <!--Form Modal-->
+        <div class="modal" id="register" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Register to receive movie deals</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        
+                    <form>
+                        <fieldset class="form-group">
+                            <label for="firstname">First Name:</label>
+                            <input type="text" class="form-control" id="firstname" placeholder="First Name...">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="lastname">Last Name:</label>
+                            <input type="text" class="form-control" id="lastname" placeholder="Last Name...">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Email...">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password...">
+                        </fieldset>
+                    </form>
+
+
+
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/Form Modal-->
+
+        <!--Footer-->
         <div class="container my-5">
             <ul class="nav nav-inline">
                 <li class="nav-item">
@@ -170,7 +219,7 @@
                 </li>
             </ul>
         </div>
-
+        <!--/Footer-->
 
 
 
@@ -187,6 +236,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+
+    <script>
+        $('.popover-dismiss').popover({ //Dismiss popover function
+                trigger: 'focus'
+        })
+    </script>
+
+
 </body>
 
 </html>
