new badge for king king

--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -68,7 +68,7 @@
                     <h3>Now Playing:</h3>
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <a class="nav-link" href="#">Kong: Skull Island</a>
+                            <a class="nav-link" href="#">Kong: Skull Island&nbsp;<span class="badge badge-primary">New</span></a>
                         </li>
                         <li class="list-group-item">
                             <a class="nav-link" href="#">Ghost in the Shell</a>
@@ -168,7 +168,6 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        
                     <form>
                         <fieldset class="form-group">
                             <label for="firstname">First Name:</label>
@@ -187,11 +186,6 @@
                             <input type="password" class="form-control" id="password" placeholder="Password...">
                         </fieldset>
                     </form>
-
-
-
-
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary">Save changes</button>
